# metnum-tp1

./: CMakeLists.txt  README.md
ejemplos/ejemplo1/: show_depths.m  show_model.m  show_normales.m
ejemplos/ejemplo2/: mymodel2.m
informe/: desarrollo.tex  informe.tex  intro.tex  resultados.tex
src/: calibration.h  cholesky.h  gauss.h  main.cpp  mask.cpp  mask.h  matrix.cpp  matrix.h  plu.h  reconstruct3d.h  sparse_matrix.cpp  sparse_matrix.h  utils.cpp  utils.h
test/: CMakeLists.txt  CalibrationTest.cpp  CholeskyTest.cpp  GaussTest.cpp  MaskTest.cpp  MatrixTest.cpp  SparseMatrixTest.cpp
